// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentLink creates relative paths when at the root (unused) 1`] = `
<a
  href="books/bookslug/pages/page-title"
  onClick={[Function]}
/>
`;

exports[`ContentLink creates relative paths when deeply under the same Page (unused) 1`] = `
<a
  href=".."
  onClick={[Function]}
/>
`;

exports[`ContentLink creates relative paths when in a different book 1`] = `
<a
  href="../../bookslug/pages/page-title"
  onClick={[Function]}
/>
`;

exports[`ContentLink creates relative paths when in the same book 1`] = `
<a
  href="page-title"
  onClick={[Function]}
/>
`;

exports[`ContentLink creates relative paths when not in a book and not at the root (unused) 1`] = `
<a
  href="../books/bookslug/pages/page-title"
  onClick={[Function]}
/>
`;

exports[`ContentLink creates relative paths when not in a book and not at the root (unused) 2`] = `
<a
  href="../books/bookslug/pages/page-title"
  onClick={[Function]}
/>
`;

exports[`ContentLink creates relative paths when the current path ends in a / (unused) 1`] = `
<a
  href="../page-title"
  onClick={[Function]}
/>
`;

exports[`ContentLink creates relative paths when the current path ends in a / but is not the current page (unused) 1`] = `
<a
  href="../page-title"
  onClick={[Function]}
/>
`;

exports[`ContentLink creates relative paths when the same page 1`] = `
<a
  href="page-title"
  onClick={[Function]}
/>
`;

exports[`ContentLink creates relative paths when under the same Page (unused) 1`] = `
<a
  href="../page-title"
  onClick={[Function]}
/>
`;
